refactor: 네이버 포맷터 기반 리포맷 적용 (#98) - Reformat